src/styles/theme/ThemeToggleButton.module.css
.darkModeSwitch {
  position: fixed;
  bottom: 31px;
  left: 45px;
  z-index: 999999;
}

.darkModeSwitch input[type="checkbox"] {
  display: none;
}

.darkModeSwitch label {
  display: block;
  width: 3.75rem;
  height: 1.95rem;
  background-color: #a93212;
  border-radius: 30px;
  position: relative;
  cursor: pointer;
}

.darkModeSwitch label:before {
  content: "";
  position: absolute;
  width: 1.44rem;
  height: 1.44rem;
  border-radius: 50%;
  top: 4px;
  left: 3px;
  background-color: #ffffff;
  transition: 0.3s;
}

.darkModeSwitch input:checked + label {
  background-color: #79250e;
}

.darkModeSwitch input:checked + label:before {
  transform: translateX(31px);
}

.darkModeSwitch .sunIcon,
.darkModeSwitch .moonIcon {
  position: absolute;
  top: 7px;
  width: 1rem;
  height: 1rem;
  background-size: cover;
  transition: opacity 0.1s ease-in;
}

.darkModeSwitch .sunIcon {
  background-image: url("../../assets/other/sun.png");
  right: 7px;
  opacity: 0;
}

.darkModeSwitch .moonIcon {
  background-image: url("../../assets/other/moon.png");
  left: 7px;
  opacity: 0;
}

.darkModeSwitch .visible {
  opacity: 1;
}

/* Desktop */
@media only screen and (min-width: 1435px) {
  .darkModeSwitch {
    bottom: 48px;
    left: 53px;
  }
}

